# esp_snapserver

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  lpcm.patch  sdkconfig
components/esp_dlna/: CMakeLists.txt  Kconfig.projbuild
components/flac/: CMakeLists.txt  config.h
components/snapserver/: CMakeLists.txt  Kconfig.projbuild  snapserver.c  wire_chunk_fifo.c
components/snapserver/include/: server_flac_encoder.h  snapserver.h  wire_chunk_fifo.h
main/: CMakeLists.txt  Kconfig.projbuild  dlna_example.c  main.c
